--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "min-fetch",
   "version": "0.0.1",
-  "description": "$http/fetch/request For Real Project",
+  "description": "request / fetch / http For Real Project For Real Project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
