--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "min-fetch",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "request / fetch / http For Real Project For Real Project",
   "main": "index.js",
   "scripts": {
@@ -20,5 +20,10 @@
     "$http",
     "request",
     "fetch"
-  ]
+  ],
+  "dependencies": {
+    "min-qs": "^1.3.0",
+    "min-url": "^1.4.1",
+    "min-util": "^3.2.0"
+  }
 }
