--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "request / fetch / http For Real Project For Real Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,14 @@
     "min-util": "github:chunpu/min-util"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "chai": "^4.1.2",
+    "express": "^4.16.3",
+    "mocha": "^5.2.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   }
 }
