--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "min-fetch",
-  "version": "2.2.1",
-  "description": "request / fetch / http For Real Project For Real Project",
+  "version": "2.2.2",
+  "description": "request / fetch / http For Real Project, Support multiple platforms",
   "main": "index.js",
   "scripts": {
     "test": "node test",
@@ -19,8 +19,14 @@
   "homepage": "https://github.com/chunpu/min-fetch#readme",
   "keywords": [
     "$http",
+    "http",
     "request",
-    "fetch"
+    "fetch",
+    "client",
+    "wxapp",
+    "quickapp",
+    "axios",
+    "ajax"
   ],
   "dependencies": {
     "min-qs": "github:chunpu/min-qs",
