--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ajax"
   ],
   "dependencies": {
+    "min-promise": "^5.0.0",
     "min-qs": "^1.4.0",
     "min-url": "^1.5.0",
     "min-util": "^3.3.1"
